Fix animated images not showing on refresh in ImageText component

--- a/src/components/imageText/imageText.scss
+++ b/src/components/imageText/imageText.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.image-wrap {
+  min-height: 100%;
+}
+
 .image-text.image-right .container .image-wrap.inview .image,
 .image-text.image-left .container .image-wrap.inview .image{
   opacity: 1;
